--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.2.1",
-    "esm": "^3.1.1",
+    "@types/jquery": "^3.3.29",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.6",
     "viewerjs": "^1.3.1"
   },
   "devDependencies": {
-    "@types/jquery": "^3.3.29",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
+    "expose-loader": "^0.7.5",
     "raw-loader": "^1.0.0",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
@@ -27,7 +25,6 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "rimraf dist && webpack --config webpack.prod.js",
-    "serve": "cd server && poetry run flask run"
+    "build": "rimraf dist && webpack --config webpack.prod.js"
   }
 }
